--- a/templates/KakaKoin.html
+++ b/templates/KakaKoin.html
@@ -1,5 +1,5 @@
 <html>
-<title>Qaka Koin Klassic</title>
+<title>Kaka Koin</title>
 <body>
   <div id="logindiv" style="border:1px solid #000000;display: inline-block; float: right;">
 
@@ -8,17 +8,44 @@
 
     <input type="button" value="Log In" onclick="Login()" id = "loginb" align="center">
     <input type="button" value="Log Out" onclick="Logout()" id = "logoutb" style="display: inline">
-    <input type="button" value="Sign In" onclick="" id = "signinb">
+    <input type="button" value="Sign Up" onclick="SignUp()" id = "signinb">
     <h4 id="stat" align = "center"></h4>
   </div>
 
   <div id="main" align="center" style="float: center">
-    <p>Hello World</p>
+    <p>Kaka Koin Wallet</p>
+    
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script>
     function Login(){
-      localStorage.setItem('username',document.getElementById("username").value.toString())
-      localStorage.setItem('logged',true)
+      $.post("/",{"Type":"log",
+                  "User": document.getElementById("username").value.toString(),
+                   "Password": document.getElementById("password").value.toString()},
+      function(data, status){
+        console.log(data)
+        if (data == "Logged In"){
+          localStorage.setItem('username', document.getElementById("username").value.toString())
+          localStorage.setItem('logged',true)
+          refresh()
+        } else {
+          alert(data)
+        }
+      });
+    }
+
+    function SignUp(){
+        $.post("/",{"Type":"Sign",
+                    "User": document.getElementById("username").value.toString(),
+                     "Password": document.getElementById("password").value.toString()},
+        function(data, status){
+          console.log(data)
+          if (data == "Sign Up"){
+            alert("User Created! LogIn to use!")
+          } else {
+            alert(data)
+          }
+        });
     }
 
     function Logout(){
@@ -26,6 +53,7 @@
       document.getElementById("username").value = ""
       document.getElementById("password").value = ""
       localStorage.clear()
+      refresh()
     }
 
     function refresh(){
@@ -47,9 +75,11 @@
         document.getElementById("password").style = "text-align: center; margin : 0 auto; display: block"
         document.getElementById("signinb").style = "display: inline"
       }
-    }
 
-    var a = setInterval(refresh,100)
+      function start(){
+
+      }
+    }
   </script>
 </body>
 </html>
