--- a/templates/Signup.html
+++ b/templates/Signup.html
@@ -66,7 +66,7 @@
           function(data, status){
             console.log(data)
             if (data == "Sign Up"){
-              alert("User Created! LogIn to use!")
+              window.location.href = "/"
             } else {
               alert(data)
             }
