--- a/templates/Login.html
+++ b/templates/Login.html
@@ -50,6 +50,7 @@
       if (data == "Logged In"){
         localStorage.setItem('username', document.getElementById("username").value.toString())
         localStorage.setItem('logged',true)
+        window.location.href = "/"
       } else {
         alert(data)
       }
