--- a/templates/KakaKoin.html
+++ b/templates/KakaKoin.html
@@ -101,7 +101,7 @@
 
   <div id="logsign" align="center" style="float: center; display:none;">
     <h2>You Are Not Logged In!</h2>
-    <h3 style = "color:gray">Either <a href="/Log">Log In</a> Or <a href="/Sign">Sign In</a>.</h3>
+    <h3 style = "color:gray">Either <a href="/Log">Log In</a> Or <a href="/Sign">Sign Up</a>.</h3>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -156,7 +156,8 @@
       "Type":"Transfer",
       "from":localStorage["username"],
       "To":to,
-      "Amount":document.getElementById("val").value
+      "Amount":document.getElementById("val").value,
+      "DigSig":localStorage["DigSig"]
       }, function(data, status){alert(data);});
     }
   </script>
