--- a/templates/KakaKoin.html
+++ b/templates/KakaKoin.html
@@ -3,9 +3,11 @@
   <title>Kaka Koin</title>
   <style>
     table, th, td {
+        border-collapse: collapse;
         border: 0.5px solid black;
         font-weight:normal;
         table-layout:fixed;
+        background-color: #f3f3f3;
     }
 
     .bigdiv{
@@ -47,18 +49,30 @@
     }
 
     .infobox{
+      padding: 5px;
       text-align: center;
       border: 0;
       font-family: system-ui;
+      border-collapse: collapse;
+    }
+    .wrapper {
+        display: block;
+        height: 100%;
+        vertical-align: middle;
+    }
+    .infotable{
+      border:0px solid black;
+      width:100%;
+      height:100%;
     }
   </style>
 
 </head>
 <body>
-
+<div class = "wrapper"> <!--Just For CSS-->
   <div id="main" align="center" style="float: center; display:none;">
     <h3 id = "welcome" style="font-family: system-ui;">Welcome To Your Wallet, </h3>
-    <table style = "width:50%;height:50%;">
+    <table style = "width:50%;height:75%;">
       <tr>
         <th rowspan="3" style = "width: 40%;">
           <div class="scrollhistory">
@@ -88,6 +102,7 @@
               </div>
 
               <div id="Recive" style="display:none"> <!--Recive Tab (Shows Your ID) -->
+                <br><br>
                 <h2>Your Address is <a style="text-decoration: underline;" id = "adrs"></a></h2>
               </div>
 
@@ -102,14 +117,14 @@
 
       <tr></tr>
 
-      <tr style="height:30%;">
+      <tr style="height:30%;border-collapse: collapse;">
 
-        <td style="text-align:center;" colspan="2" style="height:20%;" class = "infobox"> <!-- Information Box-->
-          <table style = "width:100%;height:100%;boarder:none;">
+        <td class="infobox" style="text-align:center;" colspan="2" style="height:20%;" class = "infobox">
+          <table class="infotable">
             <tr class = "infobox">
-              <td class = "infobox"><h4>Balance: </h4><h4 id="bal" >0</h4></td> <!-- Current Balance-->
-              <td class = "infobox"><h4>Chain Size: </h4><h4 id="bsize" >0</h4></td> <!-- Chain Size-->
-              <td class = "infobox"><h4>Supply: </h4><h4 id="supply" >0</h4></td> <!-- Supply-->
+              <td class = "infobox"><h4>Balance: </h4><h4 id="bal" >0</h4></td>
+              <td class = "infobox"><h4>Chain Size: </h4><h4 id="bsize" >0</h4></td>
+              <td class = "infobox"><h4>Supply: </h4><h4 id="supply" >0</h4></td>
             </tr>
           </table>
         </td>
@@ -126,9 +141,7 @@
     <h2 style="font-family: system-ui;">You Are Not Logged In!</h2>
     <h3 style = "color:gray;font-family: system-ui;">Either <a href="/Log">Log In</a> Or <a href="/Sign">Sign Up</a>.</h3>
   </div>
-
-
-
+</div> <!--For the wrapper-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script>
     if(localStorage["logged"] == "true"){ // if logged In, Show This
